Use new material for interval

--- a/public/pages/node_forms/interval_form.html
+++ b/public/pages/node_forms/interval_form.html
@@ -1,8 +1,8 @@
-<md-text-float label="Name" ng-model="flowNode.name"></md-text-float>
-<md-text-float label="Interval" ng-model="flowNode.repeat" type="number"></md-text-float>
+<md-input-container label="Name" ng-model="flowNode.name"></md-input-container>
+<md-input-container label="Interval" ng-model="flowNode.repeat" type="number"></md-input-container>
 <p class="text-info">Interval is in milliseconds.</p>
 
-<md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
+<md-input-container label="Topic" ng-model="flowNode.topic"> </md-input-container>
 
 <span>Payload Type</span>
 <md-radio-group ng-model="flowNode.payloadType">
@@ -11,4 +11,4 @@
   <md-radio-button value="string">String</md-radio-button>
 </md-radio-group>
 
-<md-text-float ng-show="flowNode.payloadType === 'string'" label="Payload" ng-model="flowNode.payload"> </md-text-float>
+<md-input-container ng-show="flowNode.payloadType === 'string'" label="Payload" ng-model="flowNode.payload"> </md-input-container>
