--- a/public/pages/node_forms/interval_form.html
+++ b/public/pages/node_forms/interval_form.html
@@ -1,8 +1,19 @@
-<md-input-container label="Name" ng-model="flowNode.name"></md-input-container>
-<md-input-container label="Interval" ng-model="flowNode.repeat" type="number"></md-input-container>
+<md-input-container>
+  <label>Name</label>
+  <input ng-model="flowNode.name">
+</md-input-container>
+
+<md-input-container>
+  <label>Interval</label>
+  <input ng-model="flowNode.repeat" type="number">
+</md-input-container>
+
 <p class="text-info">Interval is in milliseconds.</p>
 
-<md-input-container label="Topic" ng-model="flowNode.topic"> </md-input-container>
+<md-input-container>
+  <label>Topic</label>
+  <input ng-model="flowNode.topic">
+</md-input-container>
 
 <span>Payload Type</span>
 <md-radio-group ng-model="flowNode.payloadType">
@@ -11,4 +22,7 @@
   <md-radio-button value="string">String</md-radio-button>
 </md-radio-group>
 
-<md-input-container ng-show="flowNode.payloadType === 'string'" label="Payload" ng-model="flowNode.payload"> </md-input-container>
+<md-input-container>
+  <label>Payload</label>
+  <input ng-show="flowNode.payloadType === 'string'" ng-model="flowNode.payload">
+</md-input-container>
