fix name in all forms

--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -1,6 +1,9 @@
 <div>
   <div class="form-group">
-    <md-text-float label="Filter Endpoints" ng-model="endpointFilter">    
+    <md-input-container>
+      <label>Filter Endpoints</label>
+      <input ng-model="endpointFilter">
+    </md-input-container>
   </div>
   <div class="form-group">
     <label for="selectedEndpoint">Endpoint</label>
