--- a/public/pages/node_forms/interval_form.html
+++ b/public/pages/node_forms/interval_form.html
@@ -1,11 +1,11 @@
 <md-input-container>
   <label>Name</label>
-  <input ng-model="flowNode.name">
+  <input required ng-model="flowNode.name">
 </md-input-container>
 
 <md-input-container>
   <label>Interval</label>
-  <input ng-model="flowNode.repeat" type="number">
+  <input required ng-model="flowNode.repeat" type="number">
 </md-input-container>
 
 <p class="text-info">Interval is in milliseconds.</p>
