--- a/public/pages/node_forms/debounce_form.html
+++ b/public/pages/node_forms/debounce_form.html
@@ -1,3 +1,6 @@
-<md-text-float label="Name" ng-model="flowNode.name"></md-text-float>
+<md-input-container>
+  <label>Name</label>
+  <input required ng-model="flowNode.name">
+</md-input-container>
 <md-text-float label="Interval" ng-model="flowNode.interval" type="number"></md-text-float>
 <p class="text-info">Interval is in milliseconds.</p>
