--- a/public/pages/node_forms/delay_form.html
+++ b/public/pages/node_forms/delay_form.html
@@ -1,4 +1,7 @@
-<md-text-float label="Name" ng-model="flowNode.name"></md-text-float>
+<md-input-container>
+  <label>Name</label>
+  <input required ng-model="flowNode.name">
+</md-input-container>
 
 <md-text-float label="Timeout" ng-model="flowNode.timeout" type="number"></md-text-float>
 
