--- a/public/pages/node_forms/function_form.html
+++ b/public/pages/node_forms/function_form.html
@@ -1,4 +1,7 @@
-<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-input-container>
+  <label>Name</label>
+  <input required ng-model="flowNode.name">
+</md-input-container>
 
 <div class="form-group">
   <div ui-ace="{mode: 'javascript', theme: 'chrome'}" class="code-editor" ng-model="flowNode.func"></div>
