--- a/public/pages/node_forms/pluck_form.html
+++ b/public/pages/node_forms/pluck_form.html
@@ -1,4 +1,7 @@
-<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-input-container>
+  <label>Name</label>
+  <input required ng-model="flowNode.name">
+</md-input-container>
 <div class="md-tile-content" layout="row" layout-align="space-between" style="padding: 5px 0 0 0;">
   <md-text-float label="Value" ng-model="flowNode.value" required> </md-text-float>
   <div style="margin: auto 0; font-weight: bold; font-size: 1.1em;">as</div>
