--- a/public/pages/node_forms/throttle_form.html
+++ b/public/pages/node_forms/throttle_form.html
@@ -1,2 +1,5 @@
-<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-input-container>
+  <label>Name</label>
+  <input required ng-model="flowNode.name">
+</md-input-container>
 <md-text-float label="Interval (in milliseconds)" type="number" ng-model="flowNode.interval"> </md-text-float>
