"you might want to git pull"

--- a/public/pages/node_forms/delay_form.html
+++ b/public/pages/node_forms/delay_form.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 
 <md-text-float label="Timeout" ng-model="flowNode.timeout" type="number"></md-text-float>
