--- a/public/pages/node_forms/change_form.html
+++ b/public/pages/node_forms/change_form.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 <div class="md-tile-content" layout="row" layout-align="space-between" style="padding: 5px 0 0 0;">
   <md-text-float label="Value" ng-model="flowNode.value" required> </md-text-float>
