--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 <br>
 <h3>Keys</h3>
