--- a/public/pages/node_forms/debug_form.html
+++ b/public/pages/node_forms/debug_form.html
@@ -1,4 +1,4 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
