--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 <md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
 <md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
