--- a/public/pages/node_forms/less_than_equal_form.html
+++ b/public/pages/node_forms/less_than_equal_form.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 
 <div layout="row">
