--- a/public/pages/node_forms/output_form.html
+++ b/public/pages/node_forms/output_form.html
@@ -1,5 +1,5 @@
 <md-input-container>
   <label>Name</label>
-  <input required ng-model="flowNode.name">
+  <input ng-model="flowNode.name">
 </md-input-container>
 <md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
