more input replacement

--- a/public/pages/node_forms/throttle_form.html
+++ b/public/pages/node_forms/throttle_form.html
@@ -2,4 +2,8 @@
   <label>Name</label>
   <input required ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Interval (in milliseconds)" type="number" ng-model="flowNode.interval"> </md-text-float>
+
+<md-input-container>
+  <label>Interval (in milliseconds)</label>
+  <input required type="number" ng-model="flowNode.interval">
+</md-input-container>
