--- a/public/pages/change-password.html
+++ b/public/pages/change-password.html
@@ -7,9 +7,18 @@
       </div>
     </md-toolbar>
 
-    <md-text-float type="password" label="Old Password" required ng-model="oldPassword"> </md-text-float>
-    <md-text-float type="password" label="New Password" required ng-model="newPassword"> </md-text-float>
-    <md-text-float type="password" label="New Password (again)" required ng-model="confirmNewPassword"> </md-text-float>
+    <md-input-container>
+      <label>Old Password</label>
+      <input type="password" required ng-model="oldPassword">
+    </md-input-container>
+    <md-input-container>
+      <label>New Password</label>
+      <input type="password" required ng-model="newPassword">
+    </md-input-container>
+    <md-input-container>
+      <label>New Password (again)</label>
+      <input type="password" required ng-model="confirmNewPassword">
+    </md-input-container>
   </md-content>
   <div class="md-actions" layout="row">
     <span flex></span>
