--- a/public/pages/node_forms/template_form.html
+++ b/public/pages/node_forms/template_form.html
@@ -2,8 +2,12 @@
   <label>Name</label>
   <input required ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Key" ng-model="flowNode.key"> </md-text-float>
-<br>
+
+<md-input-container>
+  <label>Key</label>
+  <input ng-model="flowNode.key">
+</md-input-container>
+
 <div class="form-group">
   <label for="template">Template</label>
   <div id="template" ui-ace="{theme: 'chrome'}" class="code-editor" ng-model="flowNode.template"></div>
