update schedule, button, output

--- a/public/pages/node_forms/button_form.html
+++ b/public/pages/node_forms/button_form.html
@@ -3,7 +3,10 @@
   <input ng-model="flowNode.name">
 </md-input-container>
 
-<md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
+<md-input-container>
+  <label>Topic</label>
+  <input ng-model="flowNode.topic">
+</md-input-container>
 <br/>
 
 <span>Payload Type</span>
