--- a/public/pages/node_forms/output_form.html
+++ b/public/pages/node_forms/output_form.html
@@ -2,4 +2,7 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
+<md-input-container>
+  <label>Topic</label>
+  <input ng-model="flowNode.topic">
+</md-input-container>
