more form changes

--- a/public/pages/node_forms/comment_form.html
+++ b/public/pages/node_forms/comment_form.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<md-input-container>
   <label for="name">Name</label>
   <textarea id="name" class="form-control" ng-model="flowNode.name" rows="10"></textarea>
-</div>
+</md-input-container>
