--- a/public/pages/node_forms/interval_form.html
+++ b/public/pages/node_forms/interval_form.html
@@ -4,11 +4,9 @@
 </md-input-container>
 
 <md-input-container>
-  <label>Interval</label>
+  <label>Interval (in milliseconds)</label>
   <input required ng-model="flowNode.repeat" type="number">
 </md-input-container>
-
-<p class="text-info">Interval is in milliseconds.</p>
 
 <md-input-container>
   <label>Topic</label>
