--- a/public/pages/node_forms/button_form.html
+++ b/public/pages/node_forms/button_form.html
@@ -9,11 +9,14 @@
 </md-input-container>
 <br/>
 
-<span>Payload Type</span>
 <md-radio-group ng-model="flowNode.payloadType">
+  <label>Payload Type</label>
   <md-radio-button value="date">Timestamp</md-radio-button>
   <md-radio-button value="none"> Blank </md-radio-button>
   <md-radio-button value="string">String</md-radio-button>
 </md-radio-group>
 
-<md-text-float ng-show="flowNode.payloadType === 'string'" label="Payload" ng-model="flowNode.payload"> </md-text-float>
+<md-input-container ng-show="flowNode.payloadType === 'string'">
+  <label>Payload</label>
+  <textarea ng-model="flowNode.payload"></textarea>
+</md-input-container>
