--- a/public/pages/node_forms/debounce_form.html
+++ b/public/pages/node_forms/debounce_form.html
@@ -2,5 +2,8 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Interval" ng-model="flowNode.interval" type="number"></md-text-float>
-<p class="text-info">Interval is in milliseconds.</p>
+
+<md-input-container>
+  <label>Interval (in milliseconds)</label>
+  <input required ng-model="flowNode.interval" type="number">
+</md-input-container>
