--- a/public/pages/node_forms/demultiplexer_form.html
+++ b/public/pages/node_forms/demultiplexer_form.html
@@ -2,4 +2,8 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Value" ng-model="flowNode.value"> </md-text-float>
+
+<md-input-container>
+  <label>Value</label>
+  <input required ng-model="flowNode.value">
+</md-input-container>
