--- a/public/pages/node_forms/get_key_form.html
+++ b/public/pages/node_forms/get_key_form.html
@@ -2,4 +2,8 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
-<md-text-float label="Key" ng-model="flowNode.key"> </md-text-float>
+
+<md-input-container>
+  <label>Key</label>
+  <input required ng-model="flowNode.key">
+</md-input-container>
