--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -2,8 +2,13 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
+
 <md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
-<md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
+
+<md-input-container>
+  <label>Filter by Topic</label>
+  <input ng-model="flowNode.filterTopic">
+</md-input-container>
 
 <div ng-hide="node.useStaticMessage === false">
   <device-message-form uuid="flowNode.uuid" token="flowNode.token" model="flowNode.staticMessage"></device-message-form>
