--- a/public/pages/param-input.html
+++ b/public/pages/param-input.html
@@ -1,12 +1,12 @@
 <div>
     <div ng-repeat="paramDefinition in paramDefinitions">
-        <md-text-float ng-if="!paramDefinition.schema" 
-            ng-hide="paramDefinition.hidden"
-            label="{{getLabel(paramDefinition)}}"
-            type="{{inputType(paramDefinition.type)}}"
+        <md-input-container ng-if="!paramDefinition.schema" 
+            ng-hide="paramDefinition.hidden">
+          <label>{{getLabel(paramDefinition)}}</label>
+          <input type="{{inputType(paramDefinition.type)}}"
             ng-model="params[paramDefinition.name]"
-            required="{{paramDefinition.required}}" >
-        </md-text-float>
+            required="{{paramDefinition.required}}">
+        </md-input-container>
         <div ng-if="paramDefinition.schema">        
             <schema-editor schema="paramDefinition.schema" model="params[paramDefinition.name]" allow-json-edit="true" additional-properties="true"></schema-editor>
         </div>
