Update button padding, logo size

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,7 +5,7 @@
     <div layout="row">
       <md-button class="login-button login-button-email" href="https://login.octoblu.com/?callback=https%3A%2F%2Fapp.octoblu.com%2Fapi%2Fsession%2F" flex>
         <i class="fa fa-envelope-o"></i>
-        Login with Email
+        Sign In with Email
       </md-button>
     </div>
 
