Fixing the static login page to point to the new authenticators.

--- a/public/static/auth-login.html
+++ b/public/static/auth-login.html
@@ -4,54 +4,59 @@
       <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.2.1/bootstrap-social.min.css">
       <link rel="stylesheet" type="text/css" href="/assets/stylesheets/font-awesome.min.css">
-      <script src="/lib/jquery/dist/jquery.js"></script>
-      <script src="/static/auth-login.js"></script>
+      <style>
+       .login-via-provider {
+       	 display : block;
+       }
+       .login-header {
+       	 margin: 50px 0 30px;
+       }
+      </style>
+     <!-- <script src="/lib/jquery/dist/jquery.js"></script>
+      <script src="/static/auth-login.js"></script> -->
 	</head>
 	<body>
 		<div class="row">
 			<div class="col-xs-12" style="padding: 20px">
 	      <div class="col-xs-12 col-lg-6 col-lg-offset-3">
 	      	<img src="/assets/images/octoblucircle.png" class="center-block">
-	        <h3 class="text-center">Octoblu Login</h3>
-	    		<form id="loginForm">
-	    			<div class="form-group">
-	    				<label for="email">Email</label>
-	    				<input class="form-control" name="email" type="email" id="email" placeholder="john.doe@example.com" />
-	    			</div>
-	    			<div class="form-group">
-	    				<label for="password">Password</label>
-	    				<input class="form-control" name="password" type="password" id="password" />
-	    			</div>
-	    		  <button type="submit" class="btn btn-lg center-block btn-success">&nbsp;&nbsp;&nbsp;&nbsp;Login&nbsp;&nbsp;&nbsp;&nbsp;</button>
-	    		</form>
+	        <h3 class="text-center login-header">Octoblu Login</h3>
 	      </div>
+	      <div class="text-center">
+		      <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+		        <p>
+		          <a href="https://login.octoblu.com/?callback=https%3A%2F%2Fapp.octoblu.com%2Fstatic%2Fauth-login-success.html" class="btn-lg btn-success login-via-provider" data-provider="email-password">
+		            <span class="fa fa-envelope-o"> Email</span>
+		          </a>
+		        </p><br>
+		      </div>
 	      <div class="text-center">
 		      <div class="col-xs-6 col-lg-4 col-lg-offset-2">
 		        <p>
-		          <button class="btn-lg btn-github login-via-provider" data-provider="github">
+		          <a href="https://github-oauth.octoblu.com/login?callback=https%3A%2F%2Fapp.octoblu.com%2Fstatic%2Fauth-login-success.html" class="btn-lg btn-github login-via-provider" data-provider="github">
 		            <span class="fa fa-github"> Github</span>
-		          </button>
+		          </a>
 		        </p><br>
 		      </div>
 		      <div class="col-xs-6 col-lg-4">
 		        <p>
-		          <button class="btn-lg btn-facebook login-via-provider" data-provider="facebook">
+		          <a href="https://facebook-oauth.octoblu.com/login?callback=https%3A%2F%2Fapp.octoblu.com%2Fstatic%2Fauth-login-success.html" class="btn-lg btn-facebook login-via-provider" data-provider="facebook">
 		            <span class="fa fa-facebook"> Facebook</span>
-		          </button>
+		          </a>
 		        </p><br>
 		      </div>
 		      <div class="col-xs-6 col-lg-4 col-lg-offset-2">
 		        <p>
-		          <button class="btn-lg btn-twitter login-via-provider" data-provider="twitter">
+		          <a href="https://twitter-oauth.octoblu.com/login?callback=https%3A%2F%2Fapp.octoblu.com%2Fstatic%2Fauth-login-success.html" class="btn-lg btn-twitter login-via-provider" data-provider="twitter">
 		            <span class="fa fa-twitter"> Twitter</span>
-		          </button>
+		          </a>
 		        </p><br>
 		      </div>
 		      <div class="col-xs-6 col-lg-4">
 		        <p>
-		          <button class="btn-lg btn-google-plus login-via-provider" data-provider="google">
+		          <a href="https://google-oauth.octoblu.com/login?callback=https%3A%2F%2Fapp.octoblu.com%2Fstatic%2Fauth-login-success.html" class="btn-lg btn-google-plus login-via-provider" data-provider="google">
 		            <span class="fa fa-google-plus"> Google+</span>
-		          </button>
+		          </a>
 		        </p><br>
 					  </div>
 					</div>
