Dynamically generate login urls

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -3,7 +3,7 @@
     <img class="login-octoblu-logo" src="/assets/images/octoblucirclebig.png">
 
     <div layout="row">
-      <md-button class="login-button login-button-email" href="https://login.octoblu.com/?callback=https%3A%2F%2Fapp.octoblu.com%2Fapi%2Fsession%2F" flex>
+      <md-button class="login-button login-button-email" ng-click="goTo" href="https://login.octoblu.com/?callback=https%3A%2F%2Fapp.octoblu.com%2Fapi%2Fsession%2F" flex>
         <i class="fa fa-envelope-o"></i>
         Sign In with Email
       </md-button>
