--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -4,6 +4,7 @@
         <h1>Edit > {{flowNode.name || flowNode.class}}</h1>
         <span flex></span>
         <md-button ng-click="toggleHelp()" aria-label="Toggle Help"><i class="fa fa-lg fa-question"></i></md-button>
+        <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
         <md-button ng-click="close()" aria-label="Close"><i class="fa fa-lg fa-close"></i></md-button>
       </div>
     </md-toolbar>
