--- a/public/pages/node_forms/button_form.html
+++ b/public/pages/node_forms/button_form.html
@@ -20,3 +20,13 @@
   <label>Payload</label>
   <textarea ng-model="flowNode.payload"></textarea>
 </md-input-container>
+
+<p>
+There are two ways to trigger your webhook:
+<br>
+<h4>Email</h4>
+<a href="mailto:{{flowNode.id}}@webhook.octoblu.com" target="_blank">{{flowNode.id}}@webhook.octoblu.com</a>
+<br>
+<h4>HTTP POST</h4>
+<a ng-href="https://app.octoblu.com/api/webhooks/{{flowNode.id}}" target="_blank">https://app.octoblu.com/api/webhooks/{{flowNode.id}}</a>
+</p>
