Enforce terms in a new way

--- a/public/pages/profile/new.html
+++ b/public/pages/profile/new.html
@@ -54,7 +54,7 @@
 
     </form>
     <div layout="row">
-      <md-button md-no-ink class="md-primary profile-button-tos" flex>View Terms of Service</md-button>
+      <md-button ui-sref="terms" md-no-ink class="md-primary profile-button-tos" flex>View Terms of Service</md-button>
     </div>
   </div>
 </md-content>
