Fixed math node.

--- a/public/pages/node_forms/math_form.html
+++ b/public/pages/node_forms/math_form.html
@@ -18,19 +18,19 @@
 </div>
 <div class="md-tile-content" layout="row" layout-align="space-between" style="padding: 5px 0 0 0;">
   <md-select id="operation" ng-model="flowNode.operation" placeholder="Select an operation">
-    <md-option ng-value="abs" description="Returns the absolute value of x">abs</md-option>
-    <md-option ng-value="acos" description="Returns the arccosine of x, in radians">acos</md-option>
-    <md-option ng-value="asin" description="Returns the arcsine of x, in radians">asin</md-option>
-    <md-option ng-value="atan" description="Returns the arctangent of x as a numeric value between -PI/2 and PI/2 radians">atan</md-option>
-    <md-option ng-value="ceil" description="Returns x, rounded upwards to the nearest integer">ceil</md-option>
-    <md-option ng-value="cos" description=" Returns the cosine of x (x is in radians)">cos</md-option>
-    <md-option ng-value="exp" description=" Returns the value of Ex">exp</md-option>
-    <md-option ng-value="floor" description=" Returns x, rounded downwards to the nearest integer">floor</md-option>
-    <md-option ng-value="log" description=" Returns the natural logarithm (base E) of x">log</md-option>
-    <md-option ng-value="pow" description=")  Returns the value of x to the power of y">pow</md-option>
-    <md-option ng-value="round" description=" Rounds x to the nearest integer">round</md-option>
-    <md-option ng-value="sin" description=" Returns the sine of x (x is in radians)">sin</md-option>
-    <md-option ng-value="sqrt" description="Returns the square root of x">sqrt</md-option>
-    <md-option ng-value="tan" description="">tan</md-option>
+    <md-option ng-value="'abs'" description="Returns the absolute value of x">abs</md-option>
+    <md-option ng-value="'acos'" description="Returns the arccosine of x, in radians">acos</md-option>
+    <md-option ng-value="'asin'" description="Returns the arcsine of x, in radians">asin</md-option>
+    <md-option ng-value="'atan'" description="Returns the arctangent of x as a numeric value between -PI/2 and PI/2 radians">atan</md-option>
+    <md-option ng-value="'ceil'" description="Returns x, rounded upwards to the nearest integer">ceil</md-option>
+    <md-option ng-value="'cos'" description=" Returns the cosine of x (x is in radians)">cos</md-option>
+    <md-option ng-value="'exp'" description=" Returns the value of Ex">exp</md-option>
+    <md-option ng-value="'floor'" description=" Returns x, rounded downwards to the nearest integer">floor</md-option>
+    <md-option ng-value="'log'" description=" Returns the natural logarithm (base E) of x">log</md-option>
+    <md-option ng-value="'pow'" description=")  Returns the value of x to the power of y">pow</md-option>
+    <md-option ng-value="'round'" description=" Rounds x to the nearest integer">round</md-option>
+    <md-option ng-value="'sin'" description=" Returns the sine of x (x is in radians)">sin</md-option>
+    <md-option ng-value="'sqrt'" description="Returns the square root of x">sqrt</md-option>
+    <md-option ng-value="'tan'" description="">tan</md-option>
   </md-select>
 </div>
