Changed profile page title

--- a/public/pages/profile/new.html
+++ b/public/pages/profile/new.html
@@ -2,7 +2,7 @@
   <div class="profile-card" layout="column">
     <img class="login-octoblu-logo" src="/assets/images/octoblucirclebig.png">
 
-    <h1 class="profile-header">Let's create an account!</h1>
+    <h1 class="profile-header">Profile Information:</h1>
 
     <form name="controller.newProfileForm" class="user-form" ng-submit="controller.submit(firstName, lastName, email, optInEmail, agreeTermsOfService)" novalidate>
       <div layout="row">
