broke all tests related to tutorials! Also, tutorials barely work.

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,4 +1,4 @@
-<div class="design2 designer-container" flex layout-fill layout="column">
+<div class="design2 designer-container" flex layout-fill layout="column" ui-view>
   <div class="logo-toolbar"> <!-- Defined first so its on the bottom layer -->
     <img src="/assets/images/octoblu.png" height="50px"/>
   </div>
