--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <link href="/lib/prism/themes/prism-coy.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/lib/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="/lib/angular-material/angular-material.css?v=busted">
+    <link rel="stylesheet" href="/lib/shepherd.js/css/shepherd-theme-default.css">
 
     <style type="text/css">
         .reveal-animation.ng-enter {
