--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -33,7 +33,7 @@
             <div flex ng-show="!loadingTopicData && topicData.data.length === 0" layout="row" layout-sm="column" layout-align="center center">
               <h3>No Data Yet. Try starting a flow.</h3>
             </div>
-            <canvas ng-hide="loadingTopicData" class="chart chart-pie" data="topicData.data" labels="topicData.labels" legend="true" click="onClickPieSlice"></canvas>
+            <canvas ng-if="!loadingTopicData" class="chart chart-pie" data="topicData.data" labels="topicData.labels" legend="true" click="onClickPieSlice"></canvas>
             <div flex ng-show="loadingTopicData" layout="row" layout-sm="column" layout-align="center center">
               <md-progress-circular md-mode="indeterminate" aria-valuemin="0" aria-valuemax="100" role="progressbar" class="md-hue-2 md-default-theme"></md-progress-circular>
             </div>
