--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -7,7 +7,7 @@
           <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('operators')" ng-class="{'active' : activeTab.name === 'operators'}" tooltip="Operator Nodes" tooltip-placement="top" >
               <i class="fa fa-plug fa-lg"></i>
           </button>
-        <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Configured Nodes" tooltip-placement="top" >
+        <button id="btn-configured-nodes" class="btn btn-default btn-sm" ng-click="toggleActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Configured Nodes" tooltip-placement="top" >
           <i class="fa fa-code-fork fa-lg"></i>
         </button>
         <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('unconfigurednodes')" ng-class="{'active' : activeTab.name === 'unconfigurednodes'}" tooltip="Available Nodes" tooltip-placement="top" >
