added witai auth

--- a/public/pages/node-wizard/add-channel/simpleauthquery.html
+++ b/public/pages/node-wizard/add-channel/simpleauthquery.html
@@ -7,17 +7,17 @@
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
       <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="password" class="control-label">API Key</label>
+        <label for="password" class="control-label">Password</label>
         <input type="password" ng-model="newChannel.password" class="form-control input-lg" id="password" required>
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
       <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="domain" class="control-label">API Key</label>
+        <label for="domain" class="control-label">Domain</label>
         <input type="text" ng-model="newChannel.domain" class="form-control input-lg" id="domain" required>
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
       <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="appKey" class="control-label">API Key</label>
+        <label for="appKey" class="control-label">App Key</label>
         <input type="text" ng-model="newChannel.appKey" class="form-control input-lg" id="appKey" required>
         <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
       </div>
