Omg, wtf, tutorials can reference elements on the page.

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/lib/angular-chart.js/dist/angular-chart.css">
     <link rel="stylesheet" href="/lib/angular-material/angular-material.css?v=busted">
     <link rel="stylesheet" href="/lib/shepherd.js/css/shepherd-theme-default.css">
+    <link rel="stylesheet" href="/lib/shepherd.js/css/shepherd-theme-dark.css">
 
     <style type="text/css">
         .reveal-animation.ng-enter {
