--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -13,7 +13,7 @@
         <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('unconfigurednodes')" ng-class="{'active' : activeTab.name === 'unconfigurednodes'}" tooltip="Available Nodes" tooltip-placement="top" >
           <i class="fa fa-plus-circle fa-lg"></i>
         </button>
-        <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug Console" tooltip-placement="top">
+        <button class="btn btn-default btn-sm" ng-click="toggleActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug" tooltip-placement="top">
           <i class="fa fa-bug fa-lg"></i>
         </button>
       </div>
