Added a resource page and route in app.js

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -40,6 +40,11 @@
         <span>Admin</span>
       </a>
 
+      <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
+        <i class="fa fa-book fa-lg"></i>
+        <span>Resources</span>
+      </a>
+
       <md-divider></md-divider>
 
       <a href ng-click="closeNav()" ui-sref="material.profile" layout="row" layout-align="start center">
